print margin guides are drawn with the sides switched
Categories
(Core :: Printing: Output, defect)
Tracking
()
People
(Reporter: dholbert, Assigned: dholbert)
References
(Blocks 1 open bug)
Details
(Whiteboard: [print2020_v86])
Attachments
(3 files)
STR:
-
Make the margin-guides show up in print-preview (e.g. by removing the condition
mPD->mPrintSettings->GetShowMarginGuides()that guards them in nsPageFrame.cpp - I'm not sure if there's any UI exposed that would get them to show right now). -
Print preview any page, e.g. https://www.example.org/
-
Choose More Settings | Margins | Custom, and enter some large value (e.g. 3.0) for the left margin
ACTUAL RESULTS:
The content moves over to respect the 3in left margin, but the left margin guideline does not. Instead, the right margin guideline moves in.
EXPECTED RESULTS:
The left margin guideline should have moved.
The right margin guideline should not have moved.
Through code inspection, it looks like we just got these swapped, in the original patch in bug 1631460. Fix coming up.
| Assignee | ||
Comment 1•4 years ago
|
||
(No releases are really affected, because there's no UI to make these lines show up right now. --> Marking affected flags as "disabled".)
| Assignee | ||
Comment 2•4 years ago
|
||
nsMargin takes its constructor-params in "top, right, bottom, left" order.
Before this patch, we had the left & right args switched, by mistake.
Note that this patch doesn't affect user-exposed behavior right now, since
there's no UI for users to enable these guides at this point.
| Assignee | ||
Comment 3•4 years ago
|
||
| Assignee | ||
Comment 4•4 years ago
|
||
Comment 6•4 years ago
|
||
| bugherder | ||
Description
•