Bug 1684093: Use the correct left/right side components, in print-preview margin-guide drawing code. r=jfkthame

nsMargin takes its constructor-params in "top, right, bottom, left" order.
Before this patch, we had the left & right args switched, by mistake.

Note that this patch doesn't affect user-exposed behavior right now, since
there's no UI for users to enable these guides at this point.

Differential Revision: https://phabricator.services.mozilla.com/D100411